# pysvg-util

./: pyproject.toml
pysvg_util/: __init__.py  args.py  output.py  svg.py  types.py
